10/15 第二次提交

--- a/index.html
+++ b/index.html
@@ -13,14 +13,78 @@
             <div id="headTop">
                 <div class="headerTopRight">
                     <div id="active">
+                        <img src="images/notice.png">
                         <a href="#">网站公告</a>
                     </div>
                     <div id="Wechat">
-
+                        <a href="#">
+                            <span></span>
+                            <b></b>
+                        </a>
+                        <a href="#">
+                        </a>
                     </div>
                 </div>
-                <div class="headerTopLeft"></div>
+                <div class="headerTopLeft">
+                    <div id="welcome">
+                        <span>您好，欢迎光临凡客诚品！</span>
+                        <span>
+                            <a href="#">登录</a>&nbsp;|&nbsp;<a href="#">注册</a>
+                        </span>
+                    </div>
+                    <div class="order">
+                        <a href="#">我的订单</a>
+                    </div>
+                </div>
             </div>
+        </div>
+        <!-- 顶部广告栏位 -->
+        <div id="logoTop">
+            <div class="vanclSearch">
+                <div class="Search">
+                    <div class="SearchBox">
+                        <input type="text" class="searchText" value="搜“日式免烫衬衫”，体验与众不同">
+                        <input type="button" class="searchbtn" >
+                    </div>
+                    <div class="Shopping" id="ShoppingCar">
+                        <p>
+                            <a href="#" id="Shoppingcar_link">购物车(<span>0</span>)</a>
+                        </p>
+                        <div id="shopList">
+                            <div class="shopnopru">
+                                <div class="shoppageno">您的购物车中没有任何商品</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="HotSearch">
+                    <p>
+                        热门搜索：
+                        <a href="" class="track">免烫衬衫</a>
+                        <a href="" class="track">水柔棉</a>
+                        <a href="" class="track">熊本熊</a>
+                        <a href="" class="track">帆布鞋</a>
+                        <a href="" class="track">运动户外</a>
+                        <a href="" class="track">家居</a>
+                        <a href="" class="track">麻衬衫</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="logoList">
+            <ul>
+                <li><a href="index.html"></a></li>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="#">衬衫</a></li>
+                <li><a href="#">T恤</a></li>
+                <li><a href="#">卫衣</a></li>
+                <li><a href="#">外套</a></li>
+                <li><a href="#">针织衫</a></li>
+                <li><a href="#">裤装</a></li>
+                <li><a href="#">鞋</a></li>
+                <li><a href="#">家居配饰</a></li>
+                <li><a href="#">内衣袜品</a></li>
+            </ul>
         </div>
     </div>
 </body>
