好不容易的一次提交

--- a/index.html
+++ b/index.html
@@ -71,21 +71,171 @@
                 </div>
             </div>
         </div>
-        <div class="logoList">
+        <div class="logoList clearfix">
             <ul>
-                <li><a href="index.html"></a></li>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="#">衬衫</a></li>
-                <li><a href="#">T恤</a></li>
-                <li><a href="#">卫衣</a></li>
-                <li><a href="#">外套</a></li>
-                <li><a href="#">针织衫</a></li>
-                <li><a href="#">裤装</a></li>
-                <li><a href="#">鞋</a></li>
-                <li><a href="#">家居配饰</a></li>
-                <li><a href="#">内衣袜品</a></li>
+                <li class="nav-one"><a href="index.html"></a></li>
+                <li>
+                    <a href="index.html">首页</a>
+                    <span class="navLine"></span>
+                </li>
+                <li>
+                    <a href="#">衬衫
+                        <em></em>
+                    </a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                        <span></span>
+                        <ul>
+                            <li><a href="#" class="track">免烫</a></li>
+                            <li><a href="#" class="track">易打理</a></li>
+                            <li><a href="#" class="track">休闲</a></li>
+                            <li><a href="#" class="track">高支</a></li>
+                            <li><a href="#" class="track">法兰绒</a></li>
+                            <li><a href="#" class="track">牛津纺</a></li>
+                            <li><a href="#" class="track">青年布</a></li>
+                            <li><a href="#" class="track">牛仔</a></li>
+                            <li><a href="#" class="track">麻</a></li>
+                            <li><a href="#" class="track">水洗棉</a></li>
+                            <li><a href="#" class="track">泡泡纱</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">T恤</a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                        <span></span>
+                        <ul>
+                            <li><a href="#" class="track">水柔棉</a></li>
+                            <li><a href="#" class="track">长袖T恤</a></li>
+                            <li><a href="#" class="track">熊本熊</a></li>
+                            <li><a href="#" class="track">全棉冰爽</a></li>
+                            <li><a href="#" class="track">POLO衫</a></li>
+                            <li><a href="#" class="track">字</a></li>
+                            <li><a href="#" class="track">复刻系列</a></li>
+                            <li><a href="#" class="track">山鸟叔</a></li>
+                            <li><a href="#" class="track">小宇宙</a></li>
+                            <li><a href="#" class="track">电影台词</a></li>
+                            <li><a href="#" class="track">科学怪人</a></li>
+                            <li><a href="#" class="track">运动T恤</a></li>
+                            <li><a href="#" class="track">花花公子</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">卫衣</a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                            <span></span>
+                            <ul>
+                                <li><a href="#" class="track">熊本熊</a></li>
+                                <li><a href="#" class="track">开衫</a></li>
+                                <li><a href="#" class="track">连帽</a></li>
+                                <li><a href="#" class="track">圆领</a></li>
+                                <li><a href="#" class="track">水柔棉</a></li>
+                            </ul>
+                        </div>
+                </li>
+                <li>
+                    <a href="#">外套</a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                            <span></span>
+                            <ul>
+                                <li><a href="#" class="track">运动户外</a></li>
+                                <li><a href="#" class="track">皮肤衣</a></li>
+                                <li><a href="#" class="track">西服</a></li>
+                                <li><a href="#" class="track">C9设计款</a></li>
+                                <li><a href="#" class="track">夹克</a></li>
+                                <li><a href="#" class="track">nautilus</a></li>
+                                <li><a href="#" class="track">大衣</a></li>
+                                <li><a href="#" class="track">羽绒服</a></li>
+                            </ul>
+                        </div>
+                </li>
+                <li>
+                    <a href="#">针织衫</a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                            <span></span>
+                            <ul>
+                                <li><a href="#" class="track">空调衫</a></li>
+                                <li><a href="#" class="track">羊毛衫</a></li>
+                                <li><a href="#" class="track">棉线衫</a></li>
+                            </ul>
+                        </div>
+                </li>
+                <li>
+                    <a href="#">裤装</a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                            <span></span>
+                            <ul>
+                                <li><a href="#" class="track">沙滩裤</a></li>
+                                <li><a href="#" class="track">针织裤</a></li>
+                                <li><a href="#" class="track">休闲裤</a></li>
+                                <li><a href="#" class="track">牛仔裤</a></li>
+                                <li><a href="#" class="track">运动裤</a></li>
+                            </ul>
+                        </div>
+                </li>
+                <li>
+                    <a href="#">鞋</a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                            <span></span>
+                            <ul>
+                                <li><a href="#" class="track">复古跑鞋</a></li>
+                                <li><a href="#" class="track">帆布鞋</a></li>
+                                <li><a href="#" class="track">休闲鞋</a></li>
+                            </ul>
+                        </div>
+                </li>
+                <li>
+                    <a href="#">家居配饰</a>
+                    <span class="navLine"></span>
+                    <div class="subNav">
+                            <span></span>
+                            <ul>
+                                <li><a href="#" class="track">床品套件</a></li>
+                                <li><a href="#" class="track">被子</a></li>
+                                <li><a href="#" class="track">枕</a></li>
+                                <li><a href="#" class="track">家居服</a></li>
+                                <li><a href="#" class="track">家居鞋</a></li>
+                                <li><a href="#" class="track">背提包</a></li>
+                                <li><a href="#" class="track">拉杆箱</a></li>
+                                <li><a href="#" class="track">皮带钱包</a></li>
+                                <li><a href="#" class="track">帽子</a></li>
+                                <li><a href="#" class="track">眼睛</a></li>
+                                <li><a href="#" class="track">毛巾</a></li>
+                            </ul>
+                        </div>
+                </li>
+                <li>
+                    <a href="#">内衣袜品</a>
+                    <div class="subNav">
+                            <span></span>
+                            <ul>
+                                <li><a href="#" class="track">船袜</a></li>
+                                <li><a href="#" class="track">中筒袜</a></li>
+                                <li><a href="#" class="track">连裤袜</a></li>
+                                <li><a href="#" class="track">内衣裤</a></li>
+                                <li><a href="#" class="track">围巾披肩</a></li>
+                                <li><a href="#" class="track">童装</a></li>
+                            </ul>
+                        </div>
+                </li>
             </ul>
         </div>
+    </div>
+    <div id="content">
+        <div id="banner">
+
+        </div>
+    </div>
+    <div id="foot">
+        <div class="Customer"></div>
+        <div class="other"></div>
     </div>
 </body>
 </html>
