--- a/index.html
+++ b/index.html
@@ -234,8 +234,55 @@
         </div>
     </div>
     <div id="foot">
-        <div class="Customer"></div>
-        <div class="other"></div>
+        <div class="Customer">
+            <ul>
+                <li>
+                    <a href="">
+                        <p class="onlineCustomer">
+                            <img src="images/onlinecustomer.png">
+                        </p>
+                        <p class="onlinetime">7X9小时在线客服</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="seven">
+                            <img src="images/seven.png" alt="">
+                        </p>
+                        <p>7天内退货</p>
+                        <p>购物满199元免运费</p>
+                    </a>
+                </li>
+                <li class="Scan">
+                    <p>
+                        <img src="images/2weima.jpg" alt="">
+                    </p>
+                    <p>
+                        扫描下载<em>凡客</em>客户端
+                    </p>
+                </li>
+            </ul>
+        </div>
+        <div class="other">
+            <ul>
+                <li><a href="#">关于凡客</a></li>
+                <li><a href="#">新手指南</a></li>
+                <li><a href="#">配送范围及时间</a></li>
+                <li><a href="#">支付方式</a></li>
+                <li><a href="#">售后服务</a></li>
+                <li class="none"><a href="#">帮助中心</a></li>
+            </ul>
+        </div>
+    </div>
+    <div id="vanclfoot">
+        <div class="footcopyright">
+            <div class="bottomtop">
+                <p>Copyright 2007 - 2018 vancl.com All Rights Reserved 京ICP证100557号 京公网安备11011502002400号 出版物经营许可证新出发京批字第直110138号</p>
+                <p>凡客诚品（北京）科技有限公司</p>
+            </div>
+        </div>
+        <span></span>
+        <div class="footpartner"></div>
     </div>
 </body>
 </html>
