头尾样式完成

--- a/index.html
+++ b/index.html
@@ -281,8 +281,22 @@
                 <p>凡客诚品（北京）科技有限公司</p>
             </div>
         </div>
-        <span></span>
-        <div class="footpartner"></div>
+        <span class="blank"></span>
+        <div class="footpartner">
+            <a href="#" class="cxwz"></a>
+            <a href="#" class="cnga"></a>
+            <a href="#" class="wsjybzzx"></a>
+            <a href="#" class="baxx"></a>
+            <a href="#" class="qn"></a>
+            <a href="#" class="cctv"></a>
+        </div>
+    </div>
+    <div id="suspend">
+        <ul>
+            <li class="down"><a href="#"></a></li>
+            <li class="service"><a href="#"></a></li>
+            <li class="goTop"><a href="#"></a></li>
+        </ul>
     </div>
 </body>
 </html>
