页面布局完成

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/resets.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -247,6 +248,110 @@
                 <li></li>
             </ol>
         </div>
+        <div id="money">
+            <img src="images/618pcqp_02.jpg" alt="">
+        </div>
+        <div id="recommend">
+            <div class="recTop">
+                <img src="images/5.jpg">
+            </div>
+            <div class="rec clearfix">
+                <ul>
+                    <li><a href=""><img src="images/1 (1).jpg" alt=""></a></li>
+                    <li><a href=""><img src="images/1g.jpg" alt=""></a></li>
+                    <li><a href=""><img src="images/2g.jpg" alt=""></a></li>
+                    <li><a href=""><img src="images/4.jpg" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="piclist" >
+            <h2>优选推荐</h2>
+            <ul>
+                <li class="pic-one">
+                    <a href="">
+                        <img src="images/pc-4.0rsmt-03.jpg" alt="">
+                    </a>
+                    <h3><span>充值购买更优惠</span>4.0日式免烫衬衫</h3>
+                </li>
+                <li class="pic-two">
+                    <div>
+                        <a href=""><img src="images/pc-srmks-03.jpg" alt=""></a>
+                        <h3><span>充值购买相当于<em>169</em>元</span>水柔棉开衫卫衣</h3>
+                    </div>
+                    <div>
+                        <a href=""><img src="images/pc-flr-03.jpg" alt=""></a>
+                        <h3><span>充值购买更优惠</span>帆布鞋专区</h3>
+                    </div>
+                </li>
+                <li class="pic-three">
+                    <a href="">
+                        <img src="images/pc-wt-03.jpg" alt="">
+                    </a>
+                    <h3><span>充值购买更优惠</span>熊本熊专区</h3>
+                </li>
+            </ul>
+            <ul>
+                    <li class="pic-one">
+                        <a href="">
+                            <img src="images/pc-4.0rsmt-03.jpg" alt="">
+                        </a>
+                        <h3><span>充值购买更优惠</span>牛津纺衬衫</h3>
+                    </li>
+                    <li class="pic-two">
+                        <div>
+                            <a href=""><img src="images/pc-srmks-03.jpg" alt=""></a>
+                            <h3><span>充值购买更优惠</span>麻衬衫</h3>
+                        </div>
+                        <div>
+                            <a href=""><img src="images/pc-flr-03.jpg" alt=""></a>
+                            <h3><span>充值购买更优惠</span>初秋精选</h3>
+                        </div>
+                    </li>
+                    <li class="pic-three">
+                        <a href="">
+                            <img src="images/pc-wt-03.jpg" alt="">
+                        </a>
+                        <h3><span>充值购买更优惠</span>外套</h3>
+                    </li>
+                </ul>
+        </div>
+        <div id="piccloak">
+            <h2>下装推荐</h2>
+            <ul>
+                <li>
+                    <a href=""><img src="images/pc-nzk-03.jpg" alt=""></a>
+                    <h3><span>充值购买相当于<em>79</em>元</span>牛仔裤</h3>
+                </li>
+                <li>
+                    <a href=""><img src="images/pc-nzk-03.jpg" alt=""></a>
+                    <h3><span>充值购买相当于<em>79</em>元</span>休闲裤</h3>
+                </li>
+                <li>
+                    <a href=""><img src="images/s.jpg" alt=""></a>
+                    <h3><span>充值购买相当于<em>49</em>元</span>针织裤</h3>
+                </li>
+                <li>
+                    <a href=""><img src="images/s.jpg" alt=""></a>
+                    <h3><span>充值购买相当于<em>99</em>元</span>轻弹水洗休闲裤</h3>
+                </li>
+                
+            </ul>
+        </div>
+        <div id="otherlist">
+            <h2>更多精品</h2>
+            <ul>
+                <li><a href=""><img src="images/pc-mj-01.jpg" alt=""></a></li>
+                <li><a href=""><img src="images/pc-ny-03.jpg" alt=""></a></li>
+                <li><a href=""><img src="images/pc-wp-03.jpg" alt=""></a></li>
+            </ul>
+        </div>
+        <div id="otherlist">
+                <ul>
+                    <li><a href=""><img src="images/pc-jj-03.jpg" alt=""></a></li>
+                    <li><a href=""><img src="images/pc-mj-01.jpg" alt=""></a></li>
+                    <li><a href=""><img src="images/pc-fbx-03.jpg" alt=""></a></li>
+                </ul>
+        </div>
     </div>
     <div id="foot">
         <div class="Customer">
@@ -315,6 +420,6 @@
     </div>
 </body>
 </html>
-<script src="jquery.js"></script>
-<script src="sport.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/sport.js"></script>
 <script src="js/banner.js"></script>
