10/16 最后一次提交[C

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>凡客诚品</title>
     <link rel="stylesheet" href="css/resets.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -232,7 +232,7 @@
     <div id="content">
         <div id="banner">
             <ul id="ulist">
-                <li z-index="1"><img src="images/1200-535.jpg" ></li>
+                <li style="display:block"><img src="images/1200-535.jpg" ></li>
                 <li><img src="images/1200x535.jpg" ></li>
                 <li><img src="images/1200x535m.jpg" ></li>
                 <li><img src="images/njf1200-535.jpg" ></li>
