--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <a href="index.html">首页</a>
                     <span class="navLine"></span>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">衬衫
                         <em></em>
                     </a>
@@ -101,7 +101,7 @@
                         </ul>
                     </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">T恤</a>
                     <span class="navLine"></span>
                     <div class="subNav">
@@ -123,7 +123,7 @@
                         </ul>
                     </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">卫衣</a>
                     <span class="navLine"></span>
                     <div class="subNav">
@@ -137,7 +137,7 @@
                             </ul>
                         </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">外套</a>
                     <span class="navLine"></span>
                     <div class="subNav">
@@ -154,7 +154,7 @@
                             </ul>
                         </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">针织衫</a>
                     <span class="navLine"></span>
                     <div class="subNav">
@@ -166,7 +166,7 @@
                             </ul>
                         </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">裤装</a>
                     <span class="navLine"></span>
                     <div class="subNav">
@@ -180,7 +180,7 @@
                             </ul>
                         </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">鞋</a>
                     <span class="navLine"></span>
                     <div class="subNav">
@@ -192,7 +192,7 @@
                             </ul>
                         </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">家居配饰</a>
                     <span class="navLine"></span>
                     <div class="subNav">
@@ -212,7 +212,7 @@
                             </ul>
                         </div>
                 </li>
-                <li>
+                <li class="ejcd">
                     <a href="#">内衣袜品</a>
                     <div class="subNav">
                             <span></span>
@@ -414,7 +414,7 @@
     <div id="suspend">
         <ul>
             <li class="down"><a href="#"></a></li>
-            <li class="service"><a href="#"></a></li>
+            <li class="service"><a href=""></a></li>
             <li class="goTop"><a href="#"></a></li>
         </ul>
     </div>
@@ -423,3 +423,4 @@
 <script src="js/jquery.js"></script>
 <script src="js/sport.js"></script>
 <script src="js/banner.js"></script>
+<script src="js/index.js"></script>
