10/17 基本样式完成

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div id="welcome">
                         <span>您好，欢迎光临凡客诚品！</span>
                         <span>
-                            <a href="#">登录</a>&nbsp;|&nbsp;<a href="#">注册</a>
+                            <a href="html/login.html">登录</a>&nbsp;|&nbsp;<a href="html/register.html">注册</a>
                         </span>
                     </div>
                     <div class="order">
