10/17 最后一次提交

--- a/html/login.html
+++ b/html/login.html
@@ -23,7 +23,7 @@
                 height: 25px; line-height: 25px; float: right; margin: 0 100px 0 0; width: 400px;
                 position: relative;">
                 凡客 Vancl 登录 <span style="font-size: 14px; font-weight: normal; position: absolute;
-                    right: 0px; bottom: 0px;">没有账户免费<a id="gotoReg" href="javascript:void(0);" style="color: #b42025;
+                    right: 0px; bottom: 0px;">没有账户免费<a id="gotoReg" href="register.html" style="color: #b42025;
                         margin: 0px;">注册</a> </span>
             </h3>
         </div>
