--- a/html/register.html
+++ b/html/register.html
@@ -23,9 +23,9 @@
         <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="02DF65DF" />
     </div>
         <span class="box15"></span>
-        <div class="regist">
+        <div class="regist clearfix">
             <h1>
-                注册新用户 <span>我已经注册，现在就<a href="Login.aspx?http://www.vancl.com?http%3A%2F%2Fwww.vancl.com%2F">登录</a></span>
+                注册新用户 <span>我已经注册，现在就<a href="login.html">登录</a></span>
             </h1>
             <div style="width: 100%; height: 10px; overflow: hidden; clear: both;">
             </div>
@@ -60,7 +60,7 @@
                                         <input maxlength='11' type="text" value="" name="textfield" id="input_phone" tabindex="1" />
                                     </div>
                                     <a href="#" class="asPhoneregBtn sprite_a" style="width: 140px;">获取短信验证码</a>
-                                    <span class="box3"></span><span class="v2reg_tips02"></span><span class="box5"></span>
+                                    <span class="box3"></span><span class="v2reg_tips01"></span><span class="box5"></span>
                                 </div>
                                 <span class="Rclear"></span></li>
                             <li id='liphonecode'>
