--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div id="Wechat">
                         <a href="#">
                             <span></span>
-                            <b></b>
+                            <b class="ewm"></b>
                         </a>
                         <a href="#">
                         </a>
