--- a/index.html
+++ b/index.html
@@ -344,13 +344,17 @@
                 <li><a href=""><img src="images/pc-ny-03.jpg" alt=""></a></li>
                 <li><a href=""><img src="images/pc-wp-03.jpg" alt=""></a></li>
             </ul>
+            <ul>
+                <li><a href=""><img src="images/pc-jj-03.jpg" alt=""></a></li>
+                <li><a href=""><img src="images/pc-mj-01.jpg" alt=""></a></li>
+                <li><a href=""><img src="images/pc-fbx-03.jpg" alt=""></a></li>
+            </ul>
         </div>
-        <div id="otherlist">
-                <ul>
-                    <li><a href=""><img src="images/pc-jj-03.jpg" alt=""></a></li>
-                    <li><a href=""><img src="images/pc-mj-01.jpg" alt=""></a></li>
-                    <li><a href=""><img src="images/pc-fbx-03.jpg" alt=""></a></li>
-                </ul>
+        <div id="pbl">
+            <h2>更多商品</h2>
+            <ul>
+                
+            </ul>
         </div>
     </div>
     <div id="foot">
@@ -424,3 +428,4 @@
 <script src="js/sport.js"></script>
 <script src="js/banner.js"></script>
 <script src="js/index.js"></script>
+<script src="js/pbl.js"></script>
