--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
                         </p>
                         <div id="shopList">
                             <div class="shopnopru">
+                                    <div class="shopCar">
+                                            <div class="empty"> 
+                                                <span></span>
+                                                <ul class="goods-list">
+                                                    <!-- <li>
+                                                        <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p480747492.webp" alt="">
+                                                        <h3>我是标题</h3>
+                                                        <strong>100</strong>
+                                                    </li> -->
+                                                </ul>
+                                            </div> 
+                                        </div>
                                 <div class="shoppageno">您的购物车中没有任何商品</div>
                             </div>
                         </div>
@@ -429,3 +441,4 @@
 <script src="js/banner.js"></script>
 <script src="js/index.js"></script>
 <script src="js/pbl.js"></script>
+<script src="js/jquery.cookie.js"></script>
